Add fair price generation using flea market sell prices

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,7 @@ jobs:
           add: |
             - prices-regular.json
             - prices-pve.json
+            - prices-fairprice-regular.json
+            - prices-fairprice-pve.json
           message: 'Update prices'
           
